tests/fixtures/errors/method_arg_type.z
# E0300: an owned String passed to a u8 method parameter is caught by
# method-call argument type-checking (walkCallArgsHoist).
main: function is {
    a: "base".string
    b: "tail".string
    a.appendByte b: b
    print "\{a}"
}
